RESOLVED FIXED276069
[WPE] WPE Platform: fix toplevel resize under wayland
https://bugs.webkit.org/show_bug.cgi?id=276069
Summary [WPE] WPE Platform: fix toplevel resize under wayland
Carlos Garcia Campos
Reported 2024-07-01 03:57:16 PDT
WPEToplevelWayland is not notifying the views about the resize request.
Attachments
Carlos Garcia Campos
Comment 1 2024-07-01 03:59:24 PDT
EWS
Comment 2 2024-07-01 05:29:25 PDT
Committed 280527@main (e0381cc1d025): <https://commits.webkit.org/280527@main> Reviewed commits have been landed. Closing PR #30339 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.