[WPE] WPE Platform: fix toplevel resize under wayland https://bugs.webkit.org/show_bug.cgi?id=276069

Reviewed by Nikolas Zimmermann.

WPEToplevelWayland is not notifying the views about the resize request.
We should call wpeToplevelWaylandResized().

* Source/WebKit/WPEPlatform/wpe/wayland/WPEToplevelWayland.cpp:
(wpeToplevelWaylandResize):

Canonical link: https://commits.webkit.org/280527@main